--- a/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
@@ -8,6 +8,7 @@
 
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     List<DonHang> dh = db.DonHangs.ToList();
+    var chuyengiao = db.ChuyenGiaos.ToList();
 }
 
 
@@ -82,8 +83,8 @@
                 <div class="row element-button">
 
                     @*<div class="col-sm-2">
-                <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-refresh"></i> Làm mới danh sách</a>
-            </div>*@
+                            <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-refresh"></i> Làm mới danh sách</a>
+                        </div>*@
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file" title="In" onclick="printDiv('printMe')">
                             <i class="fas fa-print"></i> In dữ liệu
@@ -105,23 +106,26 @@
                                         }
                                     </span>
                                 </p>
+
                                 <p>
                                     <strong>Tên nhân viên giao: </strong> @{
                                         var tendnv = db.NhanVienGHs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();}
-                                    @Html.DisplayFor(modelItem => tendnv.TenNV)
-                                </p>
-                                <p>
-                                    <strong>Số điện thoại nhân viên: </strong> @{
-                                        var sdt = db.NhanVienGHs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();}
+                                    @Html.DisplayFor(modelItem => tendnv.TenNV) - @{var sdt = db.NhanVienGHs.Where(s => s.MaGH == macg.MaGH).FirstOrDefault();}
                                     @Html.DisplayFor(modelItem => tendnv.SDT)
                                 </p>
+
+
+                                @*<p>
+                                        <strong>Số điện thoại nhân viên: </strong> @{
+
+                                    </p>*@
                                 <p>
                                     <strong>Phương tiện: </strong> @{
                                         var pt = db.PhuongTienGHs.Where(s => s.MaPT == macg.MaPT).FirstOrDefault();}
                                     @Html.DisplayFor(modelItem => pt.MaPT)
                                 </p>
                                 <p>
-                                    <strong>Địa điểm giao: </strong>
+                                    <strong>Khu vực giao: </strong>
                                     @Html.DisplayFor(modelItem => macg.KhuVucGiao)
                                 </p>
                                 break;
@@ -130,14 +134,15 @@
                                 <thead>
                                     <tr role="row">
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align:center">Mã đơn hàng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Ngày lên đơn</th>
+                                        @*<th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 70px; text-align: center ">Ngày lên đơn</th>*@
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 40px; text-align: center ">Mã đại lý </th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tên đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 50px; text-align: center ">Số điện thoại đại lý</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 190px; text-align: center ">Địa điểm giao hàng</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 100px; text-align: center ">Tình trạng thanh toán</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Thành tiền</th>
-                                        @*<th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 25px; text-align: center ">Xếp đơn</th>*@
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 140px; text-align: center ">Địa điểm giao hàng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 75px; text-align: center ">Tình trạng thanh toán</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 40px; text-align: center ">Thành tiền</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 40px; text-align: center ">Hóa đơn</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" style="width: 40px; text-align: center ">Phiếu xuất kho</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -158,9 +163,9 @@
 
                                                 @Html.DisplayFor(modelItem => item.MaDH)
                                             </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.NgayLap)
-                                            </td>
+                                            @*<td>
+                                                    @Html.DisplayFor(modelItem => item.NgayLap)
+                                                </td>*@
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.DaiLy.MaDL)
                                             </td>
@@ -196,7 +201,30 @@
                                                     @Html.DisplayFor(modelItem => ThanhTien)
                                                 </td>
                                             }
+                                            <td style="text-align:center" id="btnin">
+                                                <p>
+                                                    <a href="~/GiaoHang/InHoaDon/@item.MaDH" style="color:#002483; font-weight:bold">
+                                                        @{
+                                                            var hoadon = db.ChiTietDonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
+                                                        @Html.DisplayFor(modelItem => hoadon.MaDH)
+                                                    </a>
+                                                </p>
 
+                                                <p>
+                                                    @{ var pxk = db.PhieuNhapXuats.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
+                                                </p>
+
+                                            </td>
+                                            <td>
+                                                <p>
+                                                    <a href="~/GiaoHang/InPhieuXuatKho/@pxk.MaPhieu" style="color:#002483; font-weight:bold">
+                                                        @{
+                                                            var phieuxuat = db.PhieuNhapXuats.Where(s => s.MaDH == item.MaDH).FirstOrDefault();}
+                                                        @Html.DisplayFor(modelItem => phieuxuat.MaPhieu)
+                                                    </a>
+                                                </p>
+
+                                            </td>
                                         </tr>
                                     }
                                 </tbody>
@@ -212,17 +240,33 @@
                         <br />
                         <br />
                         <h6 style="margin-left:82%;" id="sample1">--------------</h6>
-                    </div>                    
-                </div>                
-            </div>
-            <div class="row element-button">
-                <div class="col-sm-2">
-                    <a class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh"]"><i class=""></i>Cập nhật trạng thái</a>
-                </div>
-                <div class="col-sm-2">
-                    <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachCacChuyenGiao/@TempData["magh"]"><i class=""></i> Quay lại</a>
+                    </div>
                 </div>
             </div>
+            @foreach (var item in Model)
+            {
+                if (item.ChuyenGiao.TrangThai == "Đã giao")
+                {
+                    <div class="row element-button">
+                        <div class="col-sm-2">
+                            <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachCacChuyenGiao/@TempData["magh"]"><i class=""></i> Quay lại</a>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="row element-button">
+                        <div class="col-sm-2">
+                            <a anchor.href="javascript:void(0)" class="btn btn-warning" type="button" title="update " href="~/GiaoHang/ChinhSuaChuyenGiao/@TempData["magh"]"><i class=""></i>Cập nhật trạng thái</a>
+                        </div>
+                        <div class="col-sm-2">
+                            <a class="btn btn-danger" type="button" title="Quay lại " href="~/GiaoHang/DanhSachCacChuyenGiao/@TempData["magh"]"><i class=""></i> Quay lại</a>
+                        </div>
+                    </div>
+                }
+                break;
+            }
+
         </div>
     </div>
 </div>
@@ -234,12 +278,9 @@
     function printDiv(divName) {
         var printContents = document.getElementById(divName).innerHTML;
         var originalContents = document.body.innerHTML;
-
+        document.getElementById("btnin").style.display = "none";
         document.body.innerHTML = printContents;
-
         window.print();
-
         document.body.innerHTML = originalContents;
-
     }
 </script>
