--- a/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/ChinhSuaChuyenGiao.cshtml
@@ -65,14 +65,15 @@
                         <option>Bình Dương</option>
                         <option>Bến Tre</option>
                     </select>
-                    @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.KhuVucGiao, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
                 <h5>Ngày giao:</h5>
                 <div class="col-md-10" name="NgayGiao">
-                    @Html.EditorFor(model => model.NgayGiao, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.NgayGiao, new { @class = "form-control col-md-12", type = "datetime-local", min = DateTime.Now.ToString("yyyy-MM-ddTHH:mm:00") })
+                    @*@Html.EditorFor(model => model.NgayGiao, new { htmlAttributes = new { @class = "form-control" } })*@
                     @Html.ValidationMessageFor(model => model.NgayGiao, "", new { @class = "text-danger" })
                 </div>
             </div>
