--- a/Test02/Views/GiaoHang/ThemPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ThemPhuongTienGiaoHang.cshtml
@@ -2,17 +2,18 @@
 
 @{
     ViewBag.Title = "ThemPhuongTienGiaoHang";
+    ViewBag.gh_phuongtienGH = "active";
+    ViewBag.nd = "Thêm phương tiện giao hàng";
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
 }
 
-<h2>ThemPhuongTienGiaoHang</h2>
+<h2 style="text-align:center;">Thêm phương tiện giao hàng mới</h2> 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PhuongTienGiaoHang</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,20 +33,20 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LoaiPT, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TrongTai, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LoaiPT, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LoaiPT, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TrongTai, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TrongTai, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.NgayMua, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.NgayMua, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NgayMua, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.TinhTrang, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -57,12 +58,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Thêm" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "DanhSachPhuongTienGiaoHang")
+    @Html.ActionLink("Trở lại", "DanhSachPhuongTienGiaoHang")
 </div>
