--- a/Test02/Views/GiaoHang/InHoaDon.cshtml
+++ b/Test02/Views/GiaoHang/InHoaDon.cshtml
@@ -93,7 +93,7 @@
 
                         </div>
 
-                        <h5 style="margin-left:83%;padding-top:20px;" id="sample1">Kế toán</h5>
+                        <h5 style="margin-left:82%;padding-top:20px;" id="sample1">Khách hàng</h5>
                         <h6 style="margin-left:81%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
                         <br />
                         <br />
