--- a/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ChiTietChuyenGiaoHang.cshtml
@@ -13,68 +13,6 @@
 
 
 
-<div>
-    <h4>ChuyenGiao</h4>
-    <hr />
-    @*<dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.MaNVLap)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.MaNVLap)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.NgayGiao)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.NgayGiao)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.TienThu)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TienThu)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.TrangThai)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TrangThai)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.NgayLap)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.NgayLap)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.KhuVucGiao)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.KhuVucGiao)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.PhuongTienGH.TenPT)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.PhuongTienGH.TenPT)
-            </dd>
-
-        </dl>*@
-</div>
 
 <div class="row">
     <div class="col-md-12">
@@ -229,7 +167,7 @@
                                     }
                                 </tbody>
                                 <tr>
-                                    <th colspan="6">Tổng cộng tiền thu:</th>
+                                    <th colspan="6">Tổng cộng tiền thu đơn chưa thanh toán:</th>
                                     @{ var TongCong = string.Format("{0:0,0 vnđ}", total);}
                                     <td>@Html.DisplayFor(modelItem => TongCong)</td>
                                 </tr>
