DK-Update_final_report1_12/4/2023

--- a/Test02/Views/PhongKho/BaoCao.cshtml
+++ b/Test02/Views/PhongKho/BaoCao.cshtml
@@ -161,7 +161,7 @@
                                     }
                                     else if (item.NhanVien.MaChucVu == kho)
                                     {
-                                        <p>Quản kho</p>
+                                        <p>Nhân viên kho</p>
                                     }
                                     else if (item.NhanVien.MaChucVu == kt)
                                     {
