--- a/Test02/Views/PhongKho/DeleteBBKK.cshtml
+++ b/Test02/Views/PhongKho/DeleteBBKK.cshtml
@@ -136,7 +136,15 @@
                             <label class="control-label">Chi tiết: </label>
                             @Html.DisplayFor(model => model.LyDo)
                         </div>
-                        <div></div>
+                        <div>
+
+                        </div>
+                        <h5 style="margin-left:82%;" id="sample1">Thủ kho</h5>
+                        <h6 style="margin-left:80%; font-style:italic;" id="sample1">(ký và ghi rõ họ tên)</h6>
+                        <br />
+                        <br />
+                        <br />
+                        <h6 style="margin-left:80%;" id="sample1">Nguyễn Thị Diễm Khang</h6>
                     </form>
                 </div>
             </div>
